--- a/Changes
+++ b/Changes
@@ -2,6 +2,11 @@ Version History for TMDB
 Mithun Ayachit
 
 
+0.05
+====
+
+-   No changes. 0.04_03 is now promoted to a stable release
+
 0.04_03
 =======
 
