--- a/README
+++ b/README
@@ -94,24 +94,25 @@ The constructor accepts the following options:
 
 -   apikey
 
-This is your API key
+    This is your API key
 
 -   lang
 
-This must be a valid ISO 639-1 (Alpha-2) language code. Note that with
-/3, the API no longer falls back to an English default.
+    This must be a valid ISO 639-1 (Alpha-2) language code. Note that
+    with /3, the API no longer falls back to an English default.
 
-List of ISO 639-1 codes.
+    List of ISO 639-1 codes.
 
 -   client
 
-You can provide your own HTTP::Client object, otherwise a default one is
-used.
+    You can provide your own HTTP::Client object, otherwise a default
+    one is used.
 
 -   json
 
-You can provide your own JSON implementation that can decode JSON. This
-will fall back to using JSON::Any. However, JSON::XS is recommended.
+    You can provide your own JSON implementation that can decode JSON.
+    This will fall back to using JSON::Any. However, JSON::XS is
+    recommended.
 
 CONFIGURATION
 =============
@@ -314,7 +315,7 @@ Mithun Ayachit mithun@cpan.org
 LICENSE AND COPYRIGHT
 =====================
 
-Copyright (c) 2012, Mithun Ayachit. All rights reserved.
+Copyright (c) 2013, Mithun Ayachit. All rights reserved.
 
 This module is free software; you can redistribute it and/or modify it
 under the same terms as Perl itself. See perlartistic.
