--- a/Changes
+++ b/Changes
@@ -2,6 +2,14 @@ Version History for TMDB
 Mithun Ayachit
 
 
+0.07
+====
+
+-   [RT #85530] Fixed issue where API results were being double (utf8)
+    encoded. Thanks david
+-   Do not try to print a hashref when debugging
+-   [minor] code formatting tweaks
+
 0.061
 =====
 
