--- a/README
+++ b/README
@@ -161,6 +161,12 @@ SEARCH
       my @results = $search->collection('Star Wars');   # Search for collections
       my @results = $search->list('top 250');           # Search lists
 
+      # Find using external sources
+      my @results = $search->find(
+          id     => 'tt12345',
+          source => 'imdb_id'
+      );
+
       # Discover
       my @results = $search->discover(
           {
