--- a/INSTALL
+++ b/INSTALL
@@ -1,21 +1,27 @@
 Installing TMDB
 Mithun Ayachit
 
-Distribution page
-=================
+
+
+DISTRIBUTION PAGE
+
 
 The latest and all previous releases for TMDB can be downloaded from
 https://metacpan.org/release/TMDB
 
-Install using cpanm
-===================
+
+
+INSTALL USING cpanm
+
 
 TMDB can be installed with cpanm using the following command
 
     cpanm .
 
-Install using Module::Build
-===========================
+
+
+INSTALL USING Module::Build
+
 
 TMDB can be installed with Module::Build using the following commands
 
